syntax = "proto3";

option go_package = "github.com/simplemaxr/common/orders";

// OrderService 提供订单相关的服务
service OrderService {
  // CreateOrder 创建新订单
  rpc CreateOrder(CreateOrderRequest) returns (CreateOrderResponse) {}
  // GetOrder 获取订单信息
  rpc GetOrder(GetOrderRequest) returns (GetOrderResponse) {}
}

/* Order 消息定义了订单的基本结构
 * 包含订单ID、客户ID、产品ID和数量等信息
 */
message Order {
    string OrderId = 1;     // 订单唯一标识符
    string CustomerId = 2;  // 客户ID
    string ProductId = 3;   // 产品ID
    int32 Quantity = 4;    // 订购数量
}

// CreateOrderRequest 定义创建订单时需要的参数
message CreateOrderRequest {
    string customerId = 1;  // 客户ID
    string productId = 2;   // 产品ID
    int32 quantity = 3;     // 订购数量
}

// CreateOrderResponse 定义创建订单的响应
message CreateOrderResponse {
    string status = 2;      // 订单创建状态
}

// GetOrderRequest 定义获取订单时需要的参数
message GetOrderRequest {
    string customerId = 1;  // 客户ID
}

// GetOrderResponse 定义获取订单的响应
message GetOrderResponse {
    repeated Order orders = 1;  // 订单列表
}
